# pointcloud_utils

./: .gitignore  CMakeLists.txt  README.md  modify_version.py  setup.py  upload.bash
data/: PC_0729_3.txt  PC_0729_3_pred.txt
data/pcd_files/20m/: 20m.txt  20m_gps.txt  20m_in_map.txt
data/pcd_files/40m/: 40m.txt  40m_gps.txt  40m_in_map.txt
data/pcd_files/fusion/: fusion_20m.txt  fusion_20m_gps.txt  fusion_20m_in_map.txt  fusion_40m_gps.txt  fusion_40m_in_map.txt  fusion_40m_in_map_add_height.txt
data/pcd_files/map/: whole_map_down_sample.pcd
data/pcd_files/road/: obj.txt  road_gps.txt  road_gps_back.txt  road_in_map.txt  road_in_road.txt
data/pcd_files/制图pcap/: map.txt
demo/: PCVisualizer.ipynb
include/: pointcloud.h
pc_utils/: bbox.py  pc_vis.py
pointcloud_utils/: __init__.py  bbox_utils.py  coor_trans.py  coor_trans_demo.ipynb  coor_trans_demo.py  demo.ipynb  demo.py  evaluation.py  pointcloud.py
src/: convert_ascii2bin.cpp  convert_bin2ascii.cpp  pointcloud.cpp
utils/: bbox_utils.py  pointcloud.py
